layout section__form

--- a/assets/src/template/head.html
+++ b/assets/src/template/head.html
@@ -4,8 +4,11 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://nova-clinic.ru/bitrix/cache/css/s1/nova_2020_main/template_4d1a74502a086650ca5549d82165297d/template_4d1a74502a086650ca5549d82165297d_v1.css?1682508215316504">
+<link rel="stylesheet" href="https://nova-clinic.ru/local/templates/nova_2020/js/libs/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.min.css">
 <link rel="shortcut icon" href="img/favicon.png">
 
