--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -7,18 +7,18 @@
 //@import "../../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims";
 
 // Подключение нужных SCSS исходников Bootstrap 4
-@import "../../../node_modules/bootstrap/scss/_functions";
-@import "../../../node_modules/bootstrap/scss/_variables";
-@import "../../../node_modules/bootstrap/scss/_mixins";
-@import "../../../node_modules/bootstrap/scss/_root";
-@import "../../../node_modules/bootstrap/scss/_reboot";
-@import "../../../node_modules/bootstrap/scss/_type";
+//@import "../../../node_modules/bootstrap/scss/_functions";
+//@import "../../../node_modules/bootstrap/scss/_variables";
+//@import "../../../node_modules/bootstrap/scss/_mixins";
+//@import "../../../node_modules/bootstrap/scss/_root";
+//@import "../../../node_modules/bootstrap/scss/_reboot";
+//@import "../../../node_modules/bootstrap/scss/_type";
 //@import "../../../node_modules/bootstrap/scss/_images";
 //@import "../../../node_modules/bootstrap/scss/_code";
-@import "../../../node_modules/bootstrap/scss/_grid";
-@import "../../../node_modules/bootstrap/scss/_tables";
-@import "../../../node_modules/bootstrap/scss/_forms";
-@import "../../../node_modules/bootstrap/scss/_buttons";
+//@import "../../../node_modules/bootstrap/scss/_grid";
+//@import "../../../node_modules/bootstrap/scss/_tables";
+//@import "../../../node_modules/bootstrap/scss/_forms";
+//@import "../../../node_modules/bootstrap/scss/_buttons";
 //@import "../../../node_modules/bootstrap/scss/_transitions";
 //@import "../../../node_modules/bootstrap/scss/_dropdown";
 //@import "../../../node_modules/bootstrap/scss/_button-group";
@@ -37,7 +37,7 @@
 //@import "../../../node_modules/bootstrap/scss/_list-group";
 //@import "../../../node_modules/bootstrap/scss/_close";
 //@import "../../../node_modules/bootstrap/scss/_toasts";
-@import "../../../node_modules/bootstrap/scss/_modal";
+//@import "../../../node_modules/bootstrap/scss/_modal";
 //@import "../../../node_modules/bootstrap/scss/_tooltip";
 //@import "../../../node_modules/bootstrap/scss/_popover";
 //@import "../../../node_modules/bootstrap/scss/_carousel";
@@ -49,11 +49,11 @@
 //@import "../../../node_modules/select-picker/dist/picker.css";
 
 // BASE
-@import "./base/reset";
-@import "fonts";
+//@import "./base/reset";
+//@import "fonts";
 //@import "./base/animation";
-@import "variables";
-@import "typography";
+//@import "variables";
+//@import "typography";
 
 // plugins
 //@import "./plugins/bootstrap-tagsinput";
@@ -62,9 +62,9 @@
 //@import "./plugins/picker";
 
 // components
-@import "./components/breadcrumb";
-@import "./components/filter";
-@import "./components/forms";
+//@import "./components/breadcrumb";
+//@import "./components/filter";
+//@import "./components/forms";
 //@import "./components/table";
 //@import "./components/burger";
 //@import "./components/modalMenu";
@@ -74,9 +74,10 @@
 //@import "./components/mob-divise";
 
 // sections
-@import "sections/header";//@import "sections/tab";
+//@import "sections/header";
+// @import "sections/tab";
 //@import "sections/sidebar";
-@import "sections/registration";
+//@import "sections/registration";
 
 
 // pages
